@@ -19,6 +19,7 @@
 20: fix -> invalid html (move html that is after "</html>" before "</html>")
 21: fix -> internal invalid self-closing tags (e.g. <wbr>)
 22: fix -> invalid html (remove content before "<!doctype.*>")
+23: fix -> invalid html (remove content before "<!doctype.*>") + try to repair broken html
 
 
 [PHP Simple HTML Dom v4.6.x]
